--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -43,3 +43,37 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: build
+
+  integration-tests:
+    name: Integration tests
+    runs-on: ubuntu-latest
+    needs: setup-and-build
+    permissions:
+      contents: read
+
+    steps:
+      - name: 📁 Check out the repository
+        uses: actions/checkout@v4.2.1
+
+      - name: 📦 Cache Rust toolchain
+        uses: Swatinem/rust-cache@v2
+        with:
+          prefix-key: rust-toolchain-
+
+      - name: 🛠️ Set up Rust toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+
+      - name: 🦀 Setup tests dependencies
+        uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: setup_test -- --exact
+
+      - name: 🧪 Run integration tests
+        uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: -- --skip setup_test
