--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "yt-dlp"
-version = "0.1.0"
 edition = "2021"
+version = "1.0.0"
 
 authors = ["boul2gom <contact@boul2gom.fr>"]
 description = "An asynchronous Rust library (with auto dependencies downloading) for yt-dlp, a feature-rich youtube (and others) audio/video downloader"
@@ -18,8 +18,8 @@ keywords = ["youtube", "yt-dlp", "async", "downloader"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tokio = { version = "1.41.0", features = ["rt-multi-thread", "macros", "fs", "time", "process"] }
 reqwest = { version = "0.12.9", features = ["json", "stream"] }
-tokio = { version = "1.41.0", features = ["full"] }
 futures-util = "0.3.31"
 
 serde = { version = "1.0.214", features = ["derive"] }
@@ -33,3 +33,6 @@ flate2 = "1.0.34"
 tar = "0.4.42"
 zip = "2.2.0"
 xz2 = "0.1.7"
+
+[dev-dependencies]
+lazy_static = "1.5.0"
