--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -72,8 +72,8 @@ jobs:
           command: test
           args: setup_test -- --exact
 
-      - name: 🧪 Run integration tests
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
-          args: -- --skip setup_test
+#      - name: 🧪 Run integration tests
+#        uses: actions-rs/cargo@v1
+#        with:
+#          command: test
+#          args: -- --skip setup_test
