--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,20 +11,9 @@ updates:
     assignees:
       - "boul2gom"
     commit-message:
-      prefix: "[Rust Crates] "
-      subject: "📌 Update {{ package }} to {{ version }}"
-      body: |
-        Bumps the version of {{ package }} from {{ previous_version }} to {{ version }}.
-        
-        This includes the following changes:
-        - {{ changelog_url }}
-        - Update type: {{ update_type }}
+      prefix: "🦀 [Rust Crates] "
     target-branch: "develop"
-
-    security-updates: true
     rebase-strategy: "auto"
-    auto-merge: true
-    auto-merge-method: "squash"
 
   - package-ecosystem: "github-actions"
     directory: "/"
@@ -37,18 +26,6 @@ updates:
     assignees:
       - "boul2gom"
     commit-message:
-      prefix: "[Github Actions] "
-      subject: "📌 Update {{ package }} to {{ version }}"
-      body: |
-        Bumps the version of {{ package }} from {{ previous_version }} to {{ version }}.
-        
-        This includes the following changes:
-        - {{ changelog_url }}
-        - Update type: {{ update_type }}
-
+      prefix: "🔌 [Github Actions] "
     target-branch: "develop"
-
-    security-updates: true
     rebase-strategy: "auto"
-    auto-merge: true
-    auto-merge-method: "squash"
