--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -29,6 +29,11 @@ jobs:
       - name: 📌 Install cargo-release
         run: cargo install cargo-release
 
+      - name: 🪪 Set up Git identity
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+
       - name: 🚀 Create a new patch release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
