--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ edition = "2021"
 version = "1.1.3"
 
 authors = ["boul2gom <contact@boul2gom.fr>"]
-description = "An asynchronous Rust library (with auto dependencies downloading) for yt-dlp, a feature-rich youtube (and others) audio/video downloader"
+description = "⚙️ A Rust library (with auto dependencies downloading) for yt-dlp 🎬️"
 
 license = "GPL-3.0"
 readme = "README.md"
