--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -50,6 +50,7 @@ jobs:
 
   tools-analysis:
     name: Tools analysis
+    needs: setup-and-build
     runs-on: ubuntu-latest
     permissions:
       security-events: write
@@ -74,7 +75,7 @@ jobs:
           publish_results: true
 
       - name: 📦 Upload Scorecard scan results artifact
-        uses: actions/upload-artifact@4.4.3
+        uses: actions/upload-artifact@v4.4.3
         with:
           name: SARIF file
           path: results.sarif
