--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -48,13 +48,11 @@ jobs:
         with:
           command: build
 
-  tools-analysis:
-    name: Tools analysis
+  sonarcloud-analysis:
+    name: SonarCloud analysis
     needs: setup-and-build
     runs-on: ubuntu-latest
     permissions:
-      security-events: write
-      id-token: write
       contents: read
 
     steps:
@@ -66,6 +64,19 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+  scorecard-analysis:
+    name: Scorecard analysis
+    needs: setup-and-build
+    runs-on: ubuntu-latest
+    permissions:
+      security-events: write
+      id-token: write
+      contents: read
+
+    steps:
+      - name: 📁 Check out the repository
+        uses: actions/checkout@v4.2.2
 
       - name: 🔍 Scan with Scorecard
         uses: ossf/scorecard-action@v2.4.0
@@ -81,7 +92,8 @@ jobs:
           path: results.sarif
           retention-days: 5
 
-      - name: 📦 Upload SonarCloud scan results to GitHub dashboard
+      - name: 📦 Upload Scorecard scan results to GitHub dashboard
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: results.sarif
+
