--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -88,7 +88,7 @@ jobs:
       - name: 📦 Upload Scorecard scan results artifact
         uses: actions/upload-artifact@v4.4.3
         with:
-          name: SARIF file
+          name: sarif-results
           path: results.sarif
           retention-days: 5
 
