--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -97,6 +97,7 @@ jobs:
 
     codeql-analysis:
       name: 🔍 CodeQL analysis
+      needs: setup-and-build
       runs-on: ubuntu-latest
       permissions:
         security-events: write
