--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -36,7 +36,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: clippy
-          args: -- -D warnings
+          args: --all-features -- -D warnings
 
       - name: 💄 Format code with Cargo formatter
         uses: actions-rs/cargo@v1
@@ -48,6 +48,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: build
+          args: --all-features
 
   sonarcloud-analysis:
     name: 🔍 SonarCloud analysis
