--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "yt-dlp"
 edition = "2021"
-version = "1.2.2"
+version = "1.2.3"
 
 authors = ["boul2gom <contact@boul2gom.fr>"]
 description = "⚙️ A Rust library (with auto dependencies downloading) for yt-dlp 🎬️"
@@ -14,6 +14,9 @@ repository = "https://github.com/boul2gom/yt-dlp"
 
 categories = ["api-bindings", "asynchronous", "development-tools"]
 keywords = ["youtube", "yt-dlp", "async", "downloader"]
+
+[package.metadata.docs.rs]
+all-features = true
 
 [workspace.metadata.release]
 shared-version = true
